# data-wrangler

./: .gitignore  Inference.py  README.md  app.py  baseline.py  complex_test_data.csv  data_loader.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.sh  tasks.py
server/: app.py
